@@ -13,6 +13,8 @@ Version 1.4.0:
 - Added Domain deletion confirmation.
 - Fixed IDN Domains (regex / ASCII conversion).
 - Fixed SSL Export popup.
+- Removed Server Password value from installer log.
+- Fixed Scheduled task page design.
 
 Version 1.3.0:
 - Changed all Int16 to Int32 due to issues with Int16 values
